Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ a{
         -o-background-size: auto;
         background-size: auto;
         background-repeat: no-repeat;
-        background-position: center;
+        /* background-position: center; */
         width: 100%;
         height: auto;
         background-origin: border-box;
